--- a/src/modules/Navigation/styles.css
+++ b/src/modules/Navigation/styles.css
@@ -99,7 +99,18 @@
     background: url("data:image/svg+xml;utf8,<svg version='1.1' xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 32 32'><title>facebook</title><path fill='%234267B2' d='M19 6h5v-6h-5c-3.86 0-7 3.14-7 7v3h-4v6h4v16h6v-16h5l1-6h-6v-3c0-0.542 0.458-1 1-1z'></path></svg>");
 }
 
-@media screen and (min-width: 0) and (max-width:759px) {
+@media screen and (min-width: 560px) and (max-width: 759px) {
+    .spacer-left {
+        display: none;
+    }
+
+    .site-title {
+        text-align: left;
+        margin-left: 15px;
+    }
+}
+
+@media screen and (min-width: 0) and (max-width:559px) {
     .site-title h1 {
         font-size: 16px;
         margin: 17px 0;
