--- a/src/pages/homepage/styles.css
+++ b/src/pages/homepage/styles.css
@@ -1,17 +1,7 @@
-.App {
-  text-align: center;
+.content {
+    text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.intro {
+    font-size: large;
 }
