[SC] multiple instagram posts on homepage

--- a/src/pages/homepage/styles.css
+++ b/src/pages/homepage/styles.css
@@ -1,5 +1,11 @@
-.content {
+.page {
     text-align: center;
+}
+
+.content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .intro {
