--- a/src/pages/error/styles.css
+++ b/src/pages/error/styles.css
@@ -1,17 +1,18 @@
-.page {
-    position: relative;
-}
-
 .content {
     text-align: center;
     vertical-align: middle;
 }
 
+.content > *:not(:first-child) {
+    margin-top: 40px;
+}
+
 .sadFace {
-    font-size: 48px;
+    font-size: 200px;
 }
 
 .errorCode {
+    font-size: 36px;
     color: #cccccc;
 }
 
