--- a/src/modules/Navigation/styles.module.css
+++ b/src/modules/Navigation/styles.module.css
@@ -15,25 +15,25 @@
     right: 0;
 }
 
-.social-links {
+.socialLinks {
     text-align: right;
     color: #FFFFFF;
 }
 
-.site-title {
+.siteTitle {
     display: none;
     text-align: center;
     flex-grow: 1;
 }
 
-.site-title h1 {
+.siteTitle h1 {
     color: #FFFFFF;
     text-align: left;
     font-size: 12px;
     margin: 11px 0 11px 10px;
 }
 
-.social-icon {
+.socialIcon {
     display: inline-block;
     width: 30px;
     height: 30px;
@@ -42,11 +42,11 @@
     color: transparent;
 }
 
-.social-icon:last-child {
+.socialIcon:last-child {
     margin-right: 10px;
 }
 
-.social-icon:hover {
+.socialIcon:hover {
     cursor: pointer;
 }
 
@@ -61,12 +61,12 @@
     border-radius: 8px;
 }
 
-.linked-in {
+.linkedIn {
     background: url("data:image/svg+xml;charset=utf8,%3Csvg version='1.1' xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 32 32'%3E%3Ctitle%3Elinkedin%3C/title%3E%3Cpath fill='%23FFFFFF' d='M29 0h-26c-1.65 0-3 1.35-3 3v26c0 1.65 1.35 3 3 3h26c1.65 0 3-1.35 3-3v-26c0-1.65-1.35-3-3-3zM12 26h-4v-14h4v14zM10 10c-1.106 0-2-0.894-2-2s0.894-2 2-2c1.106 0 2 0.894 2 2s-0.894 2-2 2zM26 26h-4v-8c0-1.106-0.894-2-2-2s-2 0.894-2 2v8h-4v-14h4v2.481c0.825-1.131 2.087-2.481 3.5-2.481 2.488 0 4.5 2.238 4.5 5v9z'%3E%3C/path%3E%3C/svg%3E");
     border-radius: 5px;
 }
 
-.linked-in:hover {
+.linkedIn:hover {
     background: url("data:image/svg+xml;charset=utf8,%3Csvg version='1.1' xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 32 32'%3E%3Ctitle%3Elinkedin%3C/title%3E%3Cpath fill='%230077B5' d='M29 0h-26c-1.65 0-3 1.35-3 3v26c0 1.65 1.35 3 3 3h26c1.65 0 3-1.35 3-3v-26c0-1.65-1.35-3-3-3zM12 26h-4v-14h4v14zM10 10c-1.106 0-2-0.894-2-2s0.894-2 2-2c1.106 0 2 0.894 2 2s-0.894 2-2 2zM26 26h-4v-8c0-1.106-0.894-2-2-2s-2 0.894-2 2v8h-4v-14h4v2.481c0.825-1.131 2.087-2.481 3.5-2.481 2.488 0 4.5 2.238 4.5 5v9z'%3E%3C/path%3E%3C/svg%3E");
     background-color: #FFFFFF;
 }
@@ -99,24 +99,24 @@
 
 /* mobile */
 @media screen and (min-width: 400px) and (max-width:759px) {
-    .site-title h1 {
+    .siteTitle h1 {
         text-align: left;
         font-size: 12px;
         margin: 18px 0 18px 10px;
     }
     
-    .site-title {
+    .siteTitle {
         display: block;
     }
 }
 
 /* tablet and desktop */
 @media screen and (min-width: 760px) {
-    .site-title {
+    .siteTitle {
         display: block;
     }
 
-    .site-title h1 {
+    .siteTitle h1 {
         text-align: center;
         font-size: 24px;
         margin: 11px 0;
