--- a/src/modules/Footer/styles.module.css
+++ b/src/modules/Footer/styles.module.css
@@ -1,6 +1,10 @@
+.spacer {
+    margin-top: 50px;
+}
+
 .footer {
     position: absolute;
-    bottom: 0;
+    bottom: -50px;
     background-color: #222222;
     height: 50px;
     width: 100%;
