--- a/src/modules/AboutMe/styles.module.css
+++ b/src/modules/AboutMe/styles.module.css
@@ -29,7 +29,7 @@
 /* tablet and desktop */
 @media screen and (min-width: 760px) {
     .personalBlurb {
-        flex-direction: row-reverse;
+        flex-direction: row;
     }
 
     .personalPhoto {
@@ -40,7 +40,6 @@
     .personalDetails {
         font-size: 24px;
         line-height: 36px;
-        text-align: left;
     }
 }
 
