--- a/src/modules/AboutMe/styles.module.css
+++ b/src/modules/AboutMe/styles.module.css
@@ -14,16 +14,14 @@
 }
 
 .photoContainer {
-    flex: 1;
-    margin: auto;
+    margin: 20px auto;
 }
 
 .personalDetails {
     font-size: 18px;
     line-height: 27px;
     text-align: center;
-    flex: 1;
-    margin: auto 40px;
+    margin: 0 40px;
 }
 
 /* tablet and desktop */
@@ -40,13 +38,23 @@
     .personalDetails {
         font-size: 24px;
         line-height: 36px;
+        margin: 20px 40px;
     }
 }
 
 /* desktop */
 @media screen and (min-width: 1240px) {
+    .photoContainer,
+    .personalDetails {
+        flex: 1;
+    }
+
     .personalPhoto {
         width: 350px;
         height: 350px;
+    }
+
+    .personalDetails {
+        margin: 60px 40px;
     }
 }
