--- a/src/modules/styles.css
+++ b/src/modules/styles.css
@@ -11,6 +11,26 @@
     background-color: gainsboro;
 }
 
+.section:nth-of-type(2n)::before {
+    content: "";
+    position: absolute;
+    margin-top: -40px;
+    margin-left: -20px;
+    width: 100%;
+    height: 40px;
+    background-image: linear-gradient(white, gainsboro);
+}
+
+.section:nth-of-type(2n+1):not(:first-of-type)::before {
+    content: "";
+    position: absolute;
+    margin-top: -40px;
+    margin-left: -20px;
+    width: 100%;
+    height: 40px;
+    background-image: linear-gradient(gainsboro, white);
+}
+
 /* tablet and desktop */
 @media screen and (min-width: 760px) {
     .section {
