--- a/src/modules/AboutMe/styles.module.css
+++ b/src/modules/AboutMe/styles.module.css
@@ -24,6 +24,17 @@
     margin: 0 40px;
 }
 
+.link {
+    color: black;
+    text-decoration: none;
+    border-bottom: 2px dotted yellowgreen;
+}
+
+.link:hover {
+    background-color: yellowgreen;
+    cursor: pointer;
+}
+
 /* tablet and desktop */
 @media screen and (min-width: 760px) {
     .personalBlurb {
