--- a/src/modules/Navigation/styles.module.css
+++ b/src/modules/Navigation/styles.module.css
@@ -1,5 +1,6 @@
 .navigation {
     position: relative;
+    z-index: 1000000;
 }
 
 .spacer {
@@ -87,7 +88,7 @@
     color: white;
     text-transform: capitalize;
     animation: fadein 1.5s;
-    z-index: 1;
+    z-index: 1000001;
 }
 
 .navItem.selected {
@@ -111,7 +112,7 @@
 .socialLinks {
     text-align: right;
     color: #FFFFFF;
-    z-index: 3;
+    z-index: 1000003;
 }
 
 .socialIcon {
