--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,10 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: 'Lato', sans-serif;
 }
 
 .page {
   position: relative;
-  min-height: 100vh;
+  min-height: calc(100vh - 100px);
 }
