--- a/src/modules/Navigation/styles.module.css
+++ b/src/modules/Navigation/styles.module.css
@@ -34,7 +34,7 @@
 .hero::after {
     content: "Scroll down to enter";
     position: absolute;
-    bottom: 40px;
+    bottom: 80px;
     width: 100%;
     text-align: center;
     color: white;
@@ -43,6 +43,7 @@
 .video {
     display: none;
     width: 100%;
+    background: url("../../images/bg.jpg");
 }
 
 .navBar {
