--- a/src/modules/Navigation/styles.module.css
+++ b/src/modules/Navigation/styles.module.css
@@ -15,20 +15,16 @@
     background-size: 200% 100%;
 }
 
-.mobileHero {
-    height: 100vh;
-    width: 100vw;
-}
-
 .hero::before {
     content: "";
     position: absolute;
     width: 100%;
     height: 100%;
     margin-top: -40px;
-    background: url("data:image/svg+xml;charset=utf8,%3Csvg version='1.0' xmlns='http://www.w3.org/2000/svg' width='216' height='216' viewBox='0 0 72 72'%3E%3Cg transform='translate(0,72) scale(0.035,-0.035)' fill='%23000000' opacity='0.3' stroke='none'%3E%3Cpath d='M845 1854 c-78 -17 -198 -66 -283 -116 -73 -43 -247 -217 -290 -290 -93 -157 -132 -300 -132 -478 0 -178 39 -321 132 -478 43 -73 217 -247 290 -290 157 -93 300 -132 478 -132 178 0 324 40 477 132 54 32 223 182 223 198 0 4 -28 29 -62 54 l-61 46 -56 -53 c-151 -143 -312 -208 -516 -208 -247 0 -460 109 -601 308 -93 129 -135 263 -135 428 0 165 42 299 135 428 141 199 354 308 601 308 205 0 365 -65 517 -209 63 -60 59 -60 132 4 l46 42 -83 78 c-126 119 -272 196 -429 228 -97 20 -288 20 -383 0z'/%3E%3Cpath d='M881 1634 c-66 -18 -142 -55 -193 -95 -176 -140 -168 -433 15 -554 71 -47 147 -71 315 -101 247 -43 326 -79 353 -161 16 -50 7 -126 -22 -167 -95 -140 -381 -158 -629 -40 -41 19 -89 46 -107 60 -55 42 -63 35 -63 -56 l0 -80 52 -41 c74 -58 139 -88 225 -105 101 -19 321 -18 398 1 144 37 257 121 312 232 25 53 28 68 28 163 0 98 -2 109 -30 160 -35 64 -104 120 -185 151 -30 12 -145 39 -255 61 -274 55 -324 84 -341 196 -14 91 44 171 152 211 142 53 419 6 550 -94 56 -43 64 -36 64 54 l0 79 -39 35 c-57 52 -91 66 -202 88 -121 23 -317 25 -398 3z'/%3E%3C/g%3E%3C/svg%3E");
+    background: url("data:image/svg+xml;charset=utf8,%3Csvg version='1.0' xmlns='http://www.w3.org/2000/svg' width='216' height='216' viewBox='0 0 72 72'%3E%3Cg transform='translate(0,72) scale(0.035,-0.035)' fill='%23FFFFFF' opacity='1' stroke='none'%3E%3Cpath d='M845 1854 c-78 -17 -198 -66 -283 -116 -73 -43 -247 -217 -290 -290 -93 -157 -132 -300 -132 -478 0 -178 39 -321 132 -478 43 -73 217 -247 290 -290 157 -93 300 -132 478 -132 178 0 324 40 477 132 54 32 223 182 223 198 0 4 -28 29 -62 54 l-61 46 -56 -53 c-151 -143 -312 -208 -516 -208 -247 0 -460 109 -601 308 -93 129 -135 263 -135 428 0 165 42 299 135 428 141 199 354 308 601 308 205 0 365 -65 517 -209 63 -60 59 -60 132 4 l46 42 -83 78 c-126 119 -272 196 -429 228 -97 20 -288 20 -383 0z'/%3E%3Cpath d='M881 1634 c-66 -18 -142 -55 -193 -95 -176 -140 -168 -433 15 -554 71 -47 147 -71 315 -101 247 -43 326 -79 353 -161 16 -50 7 -126 -22 -167 -95 -140 -381 -158 -629 -40 -41 19 -89 46 -107 60 -55 42 -63 35 -63 -56 l0 -80 52 -41 c74 -58 139 -88 225 -105 101 -19 321 -18 398 1 144 37 257 121 312 232 25 53 28 68 28 163 0 98 -2 109 -30 160 -35 64 -104 120 -185 151 -30 12 -145 39 -255 61 -274 55 -324 84 -341 196 -14 91 44 171 152 211 142 53 419 6 550 -94 56 -43 64 -36 64 54 l0 79 -39 35 c-57 52 -91 66 -202 88 -121 23 -317 25 -398 3z'/%3E%3C/g%3E%3C/svg%3E");
     background-repeat: no-repeat;
     background-position: center;
+    opacity:0.75;
 }
 
 .hero::after {
@@ -40,10 +36,46 @@
     color: white;
 }
 
-.video {
+.slideshow {
     display: none;
     width: 100%;
-    background: url("../../images/bg.jpg");
+    height: 100vh;
+}
+
+.image1,
+.image2 {
+    position: absolute;
+    width: 100%;
+    height: 100vh;
+    background-repeat: no-repeat;
+}
+
+.image1 {
+    background: url("../../images/climbingbw.jpg");
+    background-position: -1100px -175px;
+    opacity: 0.6;
+}
+
+.image2 {
+    background: url("../../images/seatedbw.jpg");
+    background-position: -550px -80px;
+    opacity: 0;
+}
+
+@keyframes cycleOne {
+    0% { opacity: 0.6; }
+    40% { opacity: 0.6; }
+    50% { opacity: 0; }
+    90% { opacity: 0; }
+    100% { opacity: 0.6; }
+}
+
+@keyframes cycleTwo {
+    0% { opacity: 0; }
+    40% { opacity: 0; }
+    50% { opacity: 0.6; }
+    90% { opacity: 0.6; }
+    100% { opacity: 0; }
 }
 
 .navBar {
@@ -187,14 +219,29 @@
 
 /* tablet and desktop */
 @media screen and (min-width: 760px) {
-    .video {
+    .hero {
+        height: auto;
+    }
+
+    .hero::before {
+        opacity: 1;
+    }
+
+    .slideshow {
         display: block;
     }
 
-    
-    .hero {
-        background: none;
-        height: auto;
+    .image1,
+    .image2 {
+        background-position: center;
+    }
+
+    .image1 {
+        animation: cycleOne 20s linear infinite;
+    }
+
+    .image2 {
+        animation: cycleTwo 20s linear infinite;
     }
 
     .hero::after {
