--- a/src/index.scss
+++ b/src/index.scss
@@ -1,7 +1,9 @@
+@import "./styles/fonts";
+
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Lato', sans-serif;
+  font-family: $lato;
 }
 
 .page {
