--- a/src/modules/AboutMe/styles.module.scss
+++ b/src/modules/AboutMe/styles.module.scss
@@ -1,3 +1,5 @@
+@import "../../styles/colors";
+
 .personalBlurb {
     display: flex;
     flex-direction: column;
@@ -25,13 +27,13 @@
 }
 
 .link {
-    color: black;
+    color: $black;
     text-decoration: none;
-    border-bottom: 2px dotted yellowgreen;
+    border-bottom: 2px dotted $atlantis;
 }
 
 .link:hover {
-    background-color: yellowgreen;
+    background-color: $atlantis;
     cursor: pointer;
 }
 
