--- a/src/modules/Footer/styles.module.scss
+++ b/src/modules/Footer/styles.module.scss
@@ -1,3 +1,5 @@
+@import "../../styles/colors";
+
 .spacer {
     margin-top: 50px;
 }
@@ -5,11 +7,11 @@
 .footer {
     position: absolute;
     bottom: -50px;
-    background-color: #222222;
+    background-color: $mine-shaft;
     height: 50px;
     width: 100%;
     text-align: center;
-    color: #FFFFFF;
+    color: $white;
     font-size: 14px;
 }
 
