--- a/src/modules/styles.scss
+++ b/src/modules/styles.scss
@@ -1,3 +1,5 @@
+@import "../styles/colors";
+
 .section {
     padding: 40px 20px 0;
 }
@@ -9,7 +11,7 @@
 }
 
 .section:nth-of-type(2n) {
-    background-color: gainsboro;
+    background-color: $alto;
 }
 
 .section:nth-of-type(2n)::before {
@@ -19,7 +21,7 @@
     margin-left: -20px;
     width: 100%;
     height: 40px;
-    background-image: linear-gradient(white, gainsboro);
+    background-image: linear-gradient($white, $alto);
 }
 
 .section:nth-of-type(2n+1):not(:first-of-type)::before {
@@ -29,7 +31,7 @@
     margin-left: -20px;
     width: 100%;
     height: 40px;
-    background-image: linear-gradient(gainsboro, white);
+    background-image: linear-gradient($alto, $white);
 }
 
 /* tablet and desktop */
