--- a/src/pages/error/styles.module.scss
+++ b/src/pages/error/styles.module.scss
@@ -1,3 +1,5 @@
+@import "../../styles/colors";
+
 .content {
     display: flex;
     flex-direction: column;
@@ -15,7 +17,7 @@
 
 .errorCode {
     font-size: 36px;
-    color: #cccccc;
+    color: $alto;
 }
 
 .linkHome {
