--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -3,6 +3,8 @@ $alto: #dcdcdc;
 $atlantis: #9acd32;
 $black: #000000;
 $cerise: #d6249f;
+$cinnabar: #e03847;
+$confetti: #e9d75a;
 $deep-cerulean: #0077B5;
 $dodger-blue: #1da1f2;
 $mine-shaft: #222222;
