--- a/src/modules/Navigation/styles.module.scss
+++ b/src/modules/Navigation/styles.module.scss
@@ -120,12 +120,16 @@
 
 .siteNav {
     display: block;
-    width: 100%;
-    margin: 5px 50px;
+    margin: 5px 30px;
     color: $white;
+    text-align: center;
 }
 
 .siteNav.collapsed {
+    display: none;
+}
+
+.siteNavDescriptor {
     display: none;
 }
 
@@ -340,6 +344,15 @@
     }
 
     .navItem {
+        display: initial;
+    }
+
+    .siteNav {
+        margin: 5px 50px;
+        text-align: left;
+    }
+
+    .siteNavDescriptor {
         display: initial;
     }
 }
