--- a/src/modules/styles.scss
+++ b/src/modules/styles.scss
@@ -10,19 +10,19 @@
     padding-top: 20px;
 }
 
-.section:nth-of-type(2n) {
+.section:nth-of-type(2n + 1) {
     background-color: $alto;
 }
 
-.section:nth-of-type(2n)::before {
+.section:nth-of-type(2n):not(:nth-of-type(2))::before {
     content: "";
     position: absolute;
     margin-top: -40px;
     margin-left: -20px;
-    width: calc(100% + 20px);
+    width: calc(100%);
     width: 100%;
     height: 40px;
-    background-image: linear-gradient($white, $alto);
+    background-image: linear-gradient($alto, $white);
 }
 
 .section:nth-of-type(2n+1):not(:first-of-type)::before {
@@ -30,9 +30,9 @@
     position: absolute;
     margin-top: -40px;
     margin-left: -20px;
-    width: calc(100% + 20px);
+    width: calc(100%);
     height: 40px;
-    background-image: linear-gradient($alto, $white);
+    background-image: linear-gradient($white, $alto);
 }
 
 /* large mobile */
