--- a/src/modules/styles.scss
+++ b/src/modules/styles.scss
@@ -19,8 +19,7 @@
     position: absolute;
     margin-top: -40px;
     margin-left: -20px;
-    width: 100%;
-    width: 100%;
+    width: calc(100% + 20px);
     height: 40px;
     background-image: linear-gradient($alto, $white);
 }
@@ -30,7 +29,7 @@
     position: absolute;
     margin-top: -40px;
     margin-left: -20px;
-    width: 100%;
+    width: calc(100% + 20px);
     height: 40px;
     background-image: linear-gradient($white, $alto);
 }
