--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -7,6 +7,7 @@ $cinnabar: #e03847;
 $confetti: #e9d75a;
 $deep-cerulean: #0077B5;
 $dodger-blue: #1da1f2;
+$gray: #808080;
 $mine-shaft: #222222;
 $picasso: #fdf497;
 $picton-blue: #3897f0;
