--- a/src/modules/Navigation/styles.module.scss
+++ b/src/modules/Navigation/styles.module.scss
@@ -98,6 +98,7 @@
 }
 
 .logo {
+    position: relative;
     z-index: 1000003;
 }
 
@@ -116,6 +117,7 @@
     background-repeat: no-repeat;
     background-position: left;
     animation: collapseLogo 0.25s;
+    top: 0px;
 }
 
 .logoS.expanded {
@@ -123,7 +125,7 @@
     background-repeat: no-repeat;
     background-position: left;
     animation: expandLogo 0.25s;
-    padding-top: 40px;
+    top: 20px;
 }
 
 .logo.sticky {
@@ -134,19 +136,19 @@
 
 @keyframes expandLogo {
     0% {
-        padding-top: 0;
+        top: 0px;
     }
     100% {
-        padding-top: 40px;
+        top: 20px;
     }
 }
 
 @keyframes collapseLogo {
     0% {
-        padding-top: 40px;
+        top: 20px;
     }
     100% {
-        padding-top: 0;
+        top: 0px;
     }
 }
 
