--- a/src/modules/styles.scss
+++ b/src/modules/styles.scss
@@ -18,8 +18,7 @@
     content: "";
     position: absolute;
     margin-top: -40px;
-    margin-left: -20px;
-    width: calc(100% + 20px);
+    width: 100%;
     height: 40px;
     background-image: linear-gradient($alto, $white);
 }
@@ -28,16 +27,23 @@
     content: "";
     position: absolute;
     margin-top: -40px;
-    margin-left: -20px;
-    width: calc(100% + 20px);
+    width: 100%;
     height: 40px;
     background-image: linear-gradient($white, $alto);
 }
 
 /* large mobile */
 @media screen and (min-width: 360px) {
-    .section {
+    .section:not(.fullwidth) {
         padding: 40px 20px 0;
+    }
+
+    .section:not(.fullwidth):nth-of-type(2n):not(:nth-of-type(2))::before {
+        margin-left: -20px;
+    }
+    
+    .section:not(.fullwidth):nth-of-type(2n+1):not(:first-of-type)::before {
+        margin-left: -20px;
     }
 }
 
