--- a/src/modules/Slideshow/styles.module.scss
+++ b/src/modules/Slideshow/styles.module.scss
@@ -9,9 +9,8 @@
     width: 100%;
     height: 100vh;
     position: relative;
-    background: url("../../images/bg.jpg");	
-    background-position: center;	
-    background-size: 200% 100%;
+    background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), radial-gradient(circle at top right, rgba(34, 167, 240, 0.6), rgba(0,0,0,0), rgba(217, 30, 24, 0.6)), radial-gradient(circle at bottom right, rgba(0, 230, 64, 0.6), rgba(0,0,0,0), rgba(77, 19, 209, 0.6));
+    background-color: $gray;
     margin-top: -50px;
     z-index: 1000002;
 }
@@ -50,11 +49,6 @@
     height: auto;
 }
 
-:not(.hero).slideshow {
-    display: inline-grid;
-    width: 100%;
-}
-
 .slideshow.hideMobile {
     display: none;
 }
@@ -77,7 +71,19 @@
 }
 
 .hero .image.placeholder {
+    position: relative;
     visibility: visible;
+    opacity: 0;
+}
+
+.hero.slideshow::before {
+    content: "";
+    position: absolute;
+    display: block;
+    width: 100%;
+    height: 100%;
+    background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), radial-gradient(circle at top right, rgba(34, 167, 240, 0.6), rgba(0,0,0,0), rgba(217, 30, 24, 0.6)), radial-gradient(circle at bottom right, rgba(0, 230, 64, 0.6), rgba(0,0,0,0), rgba(77, 19, 209, 0.6));
+    background-color: $gray;
 }
 
 .image.placeholder {
