add tutorial puzzle, some IE style fixes, reduce asset cache to 8 hours

--- a/src/modules/Footer/styles.module.scss
+++ b/src/modules/Footer/styles.module.scss
@@ -18,3 +18,14 @@
 .copyrightNotice {
     display: inline-block;
 }
+
+/* IE11-specific styles */
+@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+    .spacer {
+        margin-top: 0px;
+    }
+
+    .footer {
+        position: inherit;
+    }
+}
