--- a/src/pages/puzzle/styles.module.scss
+++ b/src/pages/puzzle/styles.module.scss
@@ -43,15 +43,16 @@
 }
 
 .solved {
-    width: 225px;
+    width: 260px;
     background: $atlantis;
     position: fixed;
-    top: 86px;
-    right: -50px;
+    top: 100px;
+    right: -60px;
     text-align: center;
     line-height: 50px;
     letter-spacing: 1px;
     color: $white;
     transform: rotate(45deg);
     box-shadow: 0 0 3px rgba(0,0,0,.3);
+    z-index: -1;
 }
