--- a/src/modules/PuzzleAnswerSubmission/styles.module.scss
+++ b/src/modules/PuzzleAnswerSubmission/styles.module.scss
@@ -1,8 +1,8 @@
 @import "../../styles/colors";
 
 .answerbox {
-    position: sticky;
-    left: 100%;
+    position: absolute;
+    right: 0px;
     bottom: 0px;
     width: 242px;
     min-height: 50px;
@@ -45,7 +45,7 @@
 /* IE11-specific styles */
 @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
     .answerbox {
-        position: absolute;
         bottom: 50px;
+        right: auto;
     }
 }
