--- a/src/modules/AboutMe/styles.module.scss
+++ b/src/modules/AboutMe/styles.module.scss
@@ -19,7 +19,7 @@
 .personalDetails {
     font-size: 18px;
     line-height: 27px;
-    text-align: center;
+    text-align: left;
     margin: 0 40px;
 }
 
@@ -48,7 +48,7 @@
     .personalDetails {
         font-size: 24px;
         line-height: 36px;
-        margin: 20px 40px;
+        margin: 0px 40px;
     }
 }
 
@@ -65,6 +65,6 @@
     }
 
     .personalDetails {
-        margin: 60px 40px;
+        margin: 40px;
     }
 }
