mobile answer badge and cookie clear logic

--- a/src/pages/puzzle/styles.module.scss
+++ b/src/pages/puzzle/styles.module.scss
@@ -16,7 +16,7 @@
 .description {
     font-size: 14px;
     font-style: italic;
-    margin-bottom: 20px;
+    margin: 20px 20px 0 20px;
 }
 
 .list {
@@ -42,17 +42,44 @@
     font-weight: bold;
 }
 
+.answer:hover {
+    cursor: pointer;
+}
+
 .solved {
-    width: 260px;
     background: $atlantis;
-    position: fixed;
-    top: 100px;
-    right: -60px;
+    position: absolute;
+    right: 0;
+    padding: 4px;
     text-align: center;
-    line-height: 50px;
+    font-size: 12px;
     letter-spacing: 1px;
     color: $white;
-    transform: rotate(45deg);
+    border-radius: 10px;
     box-shadow: 0 0 3px rgba(0,0,0,.3);
-    z-index: -1;
+    z-index: 1;
+}
+
+/* tablet and desktop */
+@media screen and (min-width: 760px) {
+    .solved {
+        width: 260px;
+        background: $atlantis;
+        position: fixed;
+        top: 95px;
+        right: -60px;
+        text-align: center;
+        font-size: 16px;
+        line-height: 50px;
+        letter-spacing: 1px;
+        color: $white;
+        transform: rotate(45deg);
+        border-radius: 0;
+        box-shadow: 0 0 3px rgba(0,0,0,.3);
+        z-index: -1;
+    }
+
+    .description {
+        margin: 20px 0 0;
+    }
 }
